--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <section id="hero">
     <div class="hero-container">
       <h1>Acampameto Bethel</h1>
-      <h2>Grandes momentos junto a natureza</h2>
+      <h2>Grandes momentos junto à natureza</h2>
       <a href="#about" class="btn-get-started">Conheça-nos</a>
     </div>
   </section><!-- #hero -->
@@ -184,28 +184,31 @@
         <div class="section-header">
           <h3 class="section-title">Serviços</h3>
           <p class="section-description">
-            O Acampamento conta com uma estrutura de acomodações para até x
-            pessoas. </p>
+            <!-- O Acampamento conta com uma estrutura de acomodações para até x
+            pessoas.  -->
+          </p>
         </div>
         <div class="row">
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
             <div class="box">
-              <div class="icon"><a href=""><i class="fas fa-sun"></i></a></div>
-              <h4 class="title"><a href="">Retiros</a></h4>
-              <p class="description">O acampamento conta com espaços externos e internos para ... </p>
+              <div class="icon">
+                <a href="javascript:;">
+                  <i class="fas fa-sun"></i></a></div>
+              <h4 class="title"><a href="javascript:;">Retiros</a></h4>
+              <p class="description">O acampamento conta com espaços externos e internos para gincanas, brincadeiras, cultos, etc.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
             <div class="box">
-              <div class="icon"><a href=""><i class="fas fa-graduation-cap"></i></a></div>
-              <h4 class="title"><a href="">Espaço para palestras</a></h4>
-              <p class="description">Com espaço amplo para acomodar x pessoas um templo para palestras pode ser utlizado.</p>
+              <div class="icon"><a href="javascript:;"><i class="fas fa-graduation-cap"></i></a></div>
+              <h4 class="title"><a href="javascript:;">Espaço para palestras</a></h4>
+              <p class="description">Com espaço amplo para acomodar até 200* pessoas um templo pode ser utlizado para palestras .</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
             <div class="box">
-              <div class="icon"><a href=""><i class="fas fa-calendar-alt"></i></a></div>
-              <h4 class="title"><a href="">EVENTOS</a></h4>
+              <div class="icon"><a href="javascript:;"><i class="fas fa-calendar-alt"></i></a></div>
+              <h4 class="title"><a href="javascript:;">EVENTOS</a></h4>
               <p class="description">Há a possibilidade de reservar nossos espaços para promoção de eventos mediante entrevista prévia.</p>
             </div>
           </div>
@@ -213,24 +216,23 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
             <div class="box">
-              <div class="icon"><a href=""><i class="fas fa-volleyball-ball"></i></a></div>
-              <h4 class="title"><a href="">Quadra de Volley</a></h4>
+              <div class="icon"><a href="javascript:;"><i class="fas fa-volleyball-ball"></i></a></div>
+              <h4 class="title"><a href="javascript:;">Quadra de Volley</a></h4>
               <p class="description">Quadra de Volley de areia disponível.</p>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
-            <div class="box">
-              <div class="icon"><a href=""><i class="fas fa-futbol"></i></a></div>
-              <h4 class="title"><a href="">Campo de Futebol</a></h4>
-              <p class="description">Campo de Futebol para 11 jogadores.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
             <div class="box">
-              <div class="icon"><a href=""><i class="fas fa-basketball-ball"></i></a></div>
-              <h4 class="title"><a href="">Quadra poliesportiva</a></h4>
+              <div class="icon"><a href="javascript:;"><i class="fas fa-basketball-ball"></i></a></div>
+              <h4 class="title"><a href="javascript:;">Quadra poliesportiva</a></h4>
               <p class="description">Quadra de cimeto Poliesportiva para a prática de futebol de salão, volley, Basquete, tennis, e ao lado uma cancha de bocha de terra batida.</p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
+            <div class="box">
+              <div class="icon"><a href="javascript:;"><i class="fas fa-futbol"></i></a></div>
+              <h4 class="title"><a href="javascript:;">Campo de Futebol</a></h4>
+              <p class="description">Campo de Futebol para 11 jogadores.</p>
             </div>
           </div>
         </div>
@@ -242,7 +244,7 @@
     <!--==========================
     Call To Action Section
     ============================-->
-    <section id="call-to-action">
+    <!-- <section id="call-to-action">
       <div class="container wow fadeIn">
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
@@ -255,7 +257,8 @@
         </div>
 
       </div>
-    </section><!-- #call-to-action -->
+    </section> -->
+    <!-- #call-to-action -->
 
     <!--==========================
       Portfolio Section
@@ -281,7 +284,7 @@
 
         <div class="row" id="portfolio-wrapper">
           <div class="col-lg-3 col-md-6 portfolio-item filter-estrutura">
-            <a href="">
+            <a href="javascript:;">
               <img src="img/portfolio/refeitorio.jpg" alt="">
               <div class="details">
                 <!-- <h4>Refeitóio</h4> -->
@@ -292,7 +295,7 @@
           </div>
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-estrutura">
-            <a href="">
+            <a href="javascript:;">
               <img src="img/portfolio/dormitorio1.jpg" alt="">
               <div class="details">
                 <h4>Dormitórios</h4>
@@ -302,7 +305,7 @@
           </div>
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-estrutura">
-            <a href="">
+            <a href="javascript:;">
               <img src="img/portfolio/dormitorio2.jpg" alt="">
               <div class="details">
                 <h4>Dormitório</h4>
@@ -312,7 +315,7 @@
           </div>
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-estrutura">
-            <a href="">
+            <a href="javascript:;">
               <img src="img/portfolio/cantina.jpg" alt="">
               <div class="details">
                 <h4>Cantina</h4>
@@ -322,7 +325,7 @@
           </div>
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-esporte">
-            <a href="">
+            <a href="javascript:;">
               <img src="img/portfolio/quadrafutebol.jpeg" alt="">
               <div class="details">
                 <h4>Quadra Poliesportiva</h4>
@@ -331,78 +334,74 @@
             </a>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-web">
-            <a href="">
-              <img src="img/portfolio/web3.jpg" alt="">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-esporte">
+            <a href="javascript:;">
+              <img src="img/portfolio/poliesportiva1.jpeg" alt="">
               <div class="details">
-                <h4>Web 3</h4>
-                <span>Alored dono par</span>
+                <h4>Quadra Poliesportiva</h4>
+                <span></span>
               </div>
             </a>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-card">
-            <a href="">
-              <img src="img/portfolio/card3.jpg" alt="">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-esporte">
+            <a href="javascript:;">
+              <img src="img/portfolio/campograma.jpg" alt="">
               <div class="details">
-                <h4>Card 3</h4>
-                <span>Alored dono par</span>
+                <h4>Campo</h4>
+                <span>Gramado para 11 jogadores.</span>
               </div>
             </a>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-estrutura">
-            <a href="">
-              <img src="img/portfolio/app2.jpg" alt="">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-lazer">
+            <a href="javascript:;">
+              <img src="img/portfolio/piscina.jpeg" alt="">
               <div class="details">
-                <h4>App 2</h4>
-                <span>Alored dono par</span>
+                <h4>Piscina</h4>
+                <span>Com 1,3m de profundidade.</span>
               </div>
             </a>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
-            <a href="">
-              <img src="img/portfolio/logo1.jpg" alt="">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-lazer">
+            <a href="javascript:;">
+              <img src="img/portfolio/parquinho.jpeg" alt="">
               <div class="details">
-                <h4>Logo 1</h4>
-                <span>Alored dono par</span>
+                <h4>Playground</h4>
+                <span>Para brincadeira das crianças.</span>
               </div>
             </a>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
-            <a href="">
-              <img src="img/portfolio/logo3.jpg" alt="">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-lazer">
+            <a href="javascript:;">
+              <img src="img/portfolio/parquinho2.jpg" alt="">
               <div class="details">
-                <h4>Logo 3</h4>
-                <span>Alored dono par</span>
+                <h4>Playground</h4>
               </div>
             </a>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-web">
-            <a href="">
-              <img src="img/portfolio/web1.jpg" alt="">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-lazer">
+            <a href="javascript:;">
+              <img src="img/portfolio/piscina2.jpeg" alt="">
               <div class="details">
-                <h4>Web 1</h4>
-                <span>Alored dono par</span>
+                <h4>Piscina</h4>
               </div>
             </a>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
-            <a href="">
-              <img src="img/portfolio/logo2.jpg" alt="">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-lazer">
+            <a href="javascript:;">
+              <img src="img/portfolio/trenzinho2.jpg" alt="">
               <div class="details">
-                <h4>Logo 2</h4>
-                <span>Alored dono par</span>
+                <h4>Trenzinho</h4>
+                <span>Para diversão das crianças.</span>
               </div>
             </a>
           </div>
-
         </div>
-
       </div>
     </section><!-- #portfolio -->
 
@@ -419,7 +418,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6">
             <div class="member">
-              <div class="pic"><img src="img/team-1.jpg" alt=""></div>
+              <div class="pic"><img src="img/sergio.jpeg" alt=""></div>
               <h4>Sérgio Boff da Silva</h4>
               <span>Presidente</span>
             </div>
@@ -427,7 +426,7 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="member">
-              <div class="pic"><img src="img/team-3.jpg" alt=""></div>
+              <div class="pic"><img src="img/rony.jpeg" alt=""></div>
               <h4>Rony Dück</h4>
               <span>Vice-Presidente</span>
             </div>
@@ -435,7 +434,7 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="member">
-              <div class="pic"><img src="img/team-1.jpg" alt=""></div>
+              <div class="pic"><img src="img/rubens.jpeg" alt=""></div>
               <h4>Rubens Fonseca</h4>
               <span>Primeiro Tesoureiro</span>
             </div>
@@ -444,7 +443,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6">
             <div class="member">
-              <div class="pic"><img src="img/team-3.jpg" alt=""></div>
+              <div class="pic"><img src="img/marcio.jpeg" alt=""></div>
               <h4>Marcio Loewen</h4>
               <span>Segundo Tesoureiro</span>
             </div>
@@ -452,7 +451,7 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="member">
-              <div class="pic"><img src="img/team-4.jpg" alt=""></div>
+              <div class="pic"><img src="img/default.jpg" alt=""></div>
               <h4>Ester Ferreira de Menezes Ceccon</h4>
               <span>Primeiro Secretário</span>
             </div>
@@ -460,7 +459,7 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="member">
-              <div class="pic"><img src="img/team-1.jpg" alt=""></div>
+              <div class="pic"><img src="img/default.jpg" alt=""></div>
               <h4>Jean Rafael Puchetti Ferreira</h4>
               <span>Segundo Secretário</span>
             </div>
@@ -475,6 +474,7 @@
     ============================-->
     <section id="contact">
       <div class="container wow fadeInUp">
+        <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2543.1721964379653!2d-49.44848907319637!3d-25.65177578001394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dd01331cc98e7f%3A0x5d96faf66dc7ae20!2sAcampamento+Bethel!5e0!3m2!1spt-BR!2sbr!4v1493504635473" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen=""></iframe> -->
         <div class="section-header">
           <h3 class="section-title">Contate-nos</h3>
           <p class="section-description">Agradecemos por entrar em contato conosco, responderemos assim que possível.</p>
